# backend/controller/sensor-controller.js
@@ -2,6 +2,14 @@
 /*IMPORTS*/
 /*-------------------------------------------------------------*/
 
+import {
+  intruderRadar,
+  intruderThermal,
+  intruderVibration,
+} from '../helpers/intruder-detection.js';
+
+import { getStore } from '../helpers/data-store.js';
+
 /*-------------------------------------------------------------*/
 /*DECLARATION AND INITIALIZATION*/
 /*-------------------------------------------------------------*/
@@ -10,9 +18,32 @@
 /*MAIN*/
 /*-------------------------------------------------------------*/
 
-const register = async (req, res) => {
+const getSensorData = async (req, res) => {
   try {
-    res.status(200).json({ result: reservations });
+    let store = getStore();
+
+    let result = Object.keys(store).map((mac) => {
+      let lastE = store[mac][store[mac].length - 1];
+      return {
+        name: 'TEMP Edge ESP32',
+        id: mac,
+        lastUpdate: lastE.timeStamp,
+        location: 'TEMP Süd West',
+        intruderDetected:
+          intruderRadar() || intruderVibration() || intruderThermal(),
+        vibrationEnabled:
+          lastE.acc_x !== 0 && lastE.acc_y !== 0 && lastE.acc_z !== 0,
+        radarEnabled1: typeof lastE.is_radar_1 === 'number',
+        radarEnabled2: typeof lastE.is_radar_2 === 'number',
+        thermalEnabled:
+          lastE.highest_temp !== 0 &&
+          lastE.lowest_temp !== 0 &&
+          lastE.average_temp !== 0,
+        thermalImage: thermalImage,
+      };
+    });
+
+    res.status(200).json({ data: result });
   } catch (err) {
     console.log(err);
     res.status(500).json({ error: err });
@@ -21,7 +52,7 @@ const register = async (req, res) => {
 
 const transferdata = async (req, res) => {
   try {
-    res.status(200).json(reservationWithUser);
+    res.sendStatus(200);
   } catch (err) {
     console.log(err);
     res.status(500).json({ error: err });
@@ -31,4 +62,4 @@ const transferdata = async (req, res) => {
 /*-------------------------------------------------------------*/
 /*EXPORTS*/
 /*-------------------------------------------------------------*/
-export default { register, transferdata };
+export default { getSensorData, transferdata };
